Fix text readability while in dark mode

--- a/TTScorer/wwwroot/css/site.css
+++ b/TTScorer/wwwroot/css/site.css
@@ -32,6 +32,20 @@ body.dark-mode .form-control {
   border-color: #444444; /* Adjust the border color to your preference */
 }
 
+.dark-mode .navbar.bg-white {
+  background-color: #333333 !important;
+}
+
+.dark-mode .navbar-light .navbar-brand,
+.dark-mode .navbar-light .nav-link {
+  color: #ffffff !important;
+}
+
+.dark-mode .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
+}
+
+
 .container {
   max-width: 500px;
 }
